# nero_consensus

./: Cargo.toml  LICENSE  README.md
benchmark/: .committee.json  .node-0  .node-1  .node-2  .node-3  .parameters.json  fabfile.py  lock.mdb
benchmark/0/: IDENTITY  LOG  OPTIONS-000007
benchmark/1/: IDENTITY  LOG  OPTIONS-000007
benchmark/2/: IDENTITY  LOG  OPTIONS-000007
benchmark/3/: IDENTITY  LOG  OPTIONS-000007
benchmark/benchmark/: aggregate.py  commands.py  config.py  local.py  logs.py  plot.py  utils.py
benchmark/data/paper-data/: plot-script.py
config/: Cargo.toml
config/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
network/: Cargo.toml
node/: Cargo.toml
node/src/: benchmark_client.rs  consensus.rs  main.rs
primary/: Cargo.toml
primary/src/: core.rs  election.rs  elections.rs  error.rs  general.rs  lib.rs  messages.rs  network.rs  node.rs  primary.rs  vote.rs
src/: core.rs  election.rs  general.rs  main.rs  network.rs  node.rs  vote.rs
store/: Cargo.toml
